# MPM_Novice

./: .gitignore  CMakeLists.txt  Readme.md  bar.cpp  else.cpp  main.cpp  two_discs.cpp  two_discs_n.cpp
ace_mate/: AceMaterials.hpp  CMakeLists.txt  J2FiniteStrain3D.cpp  MPM_AceMaterials.hpp  SMSUtility.c  STVKPlaneStrain2D.cpp  STVKPlaneStress2D.cpp  SmallStrainHookePlaneStrain2D.cpp  SmallStrainHookePlaneStress2D.cpp  mate_01.c  mate_01.cpp  mate_planestrain_linearelasticity_ctest.nb  sms.h
benchmarks/two_disks_elastic/: two_discs_particledata.txt  two_disks_elastic.xml  two_disks_node.txt
benchmarks/two_disks_elastic/Else_Files/: ThisElseLog
data/: falling_bar_element.txt  falling_bar_node.txt  falling_bar_particle.txt  testout.vtu  two_discs_element.txt  two_discs_element_fine.txt  two_discs_node_fine.txt  two_discs_particle.txt  two_discs_particleArea.txt  two_discs_particledata_fine.txt  vpuout_1.vtp
data/Bar/: plot_data.py
data/Bar_1/: MyCVS_V  MyCVS_X
data/Bar_2_lessdens_morestif/: MyCVS_V  MyCVS_X  timeplot.py
data/two_disks_plasti/: 2disks_collide.mov  Presentation1.pptx  pictures.csv  single_pics.pvsm
doc/: AceModule.md  CMakeNotes.md  ELSE_MPM_Functions.md  ELSE_MPM_Material.md  FragenFuerRainer.md  Material.md  ParaviewCheatSheet.md  VTK_Output.md
impact/: Elements.cvs  Impactor.cvs  Nodes.cvs  Target.cvs  impact.cpp
include/: CMakeLists.txt  ELSE_ContiMechLibrary.hpp  ELSE_GeometricLibrary.hpp  ELSE_MPMDataManager.hpp  ELSE_System.hpp  MPMOutputVTK.hpp  MPMProcess.hpp  MPM_Body.hpp  MPM_GridElement.hpp  MPM_GridNode.hpp  MPM_GridNodeBC.hpp  MPM_HF.hpp  MPM_Material.hpp  MPM_OutputVTK.hpp  MPM_OwnLib.hpp  MPM_Particle.hpp  MPM_Read.hpp  MPM_SHPQ4.hpp  MPM_TimeTracker.hpp
materials/: ELSE_MPMMaterial.cpp  ELSE_MPMMaterial.hpp  ELSE_MPMMaterialFactory.hpp  LinearElasticity_A.cpp  LinearElasticity_A.hpp
mathematica/: Determinant.cpp  GPfromBrick.cpp  J2FiniteStrain3D.cpp  MPM_meshes.nb  NeoHookeTypeA.cpp  P2S.cpp  P_FT.cpp  STVKPlaneStrain2D.cpp  STVKPlaneStress2D.cpp  ScalarTensor.cpp  SmallStrainHookePlaneStrain2D.cpp  SmallStrainHookePlaneStress2D.cpp  Tensor_ijjk.cpp  Tensor_ijkj.cpp  Tensor_jijk.cpp  VonMisesStress.cpp  helper_functions.nb  mate_01.m  mate_planestrain_linearelasticity_ctest.nb  updateF.cpp
mathematica/AceShare/: MainIndex.txt  Version.txt
metal_cut/: Elements.cvs  Nodes.cvs  Piece.cvs  Tool.cvs  metal_cut.cpp
particles/: ELSE_MPMParticle.cpp  ELSE_MPMParticle.hpp  ELSE_MPMParticleFactory.hpp
src/: CMakeLists.txt  ELSE_System.cpp  MPMOutputVTK.cpp  MPMProcess.cpp  MPM_Body.cpp  MPM_GridElement.cpp  MPM_GridNode.cpp  MPM_OutputVTK.cpp  MPM_OwnLib.cpp  MPM_Particle.cpp  MPM_Process.cpp  main.cpp
